--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.26</version>
     </dependency>
+
+    <!-- c3p0 -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-c3p0</artifactId>
+      <version>5.3.10.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
