--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -5,8 +5,8 @@ mysql.username=root
 mysql.password=root120056
 
 # Hibernate properties
-hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.show_sql=true 
+hibernate.hbm2ddl.auto=create
 
 #C3P0 properties
 hibernate.c3p0.min_size=5
