--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 # MySQL connection properties
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.jdbcUrl=jdbc:mysql://localhost:3306/e-commerce_system?useSSL=false
+mysql.jdbcUrl=jdbc:mysql://localhost:3306/e-commerce_system?useSSL=false&allowPublicKeyRetrieval=true
 mysql.username=root
 mysql.password=root120056
 
