--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
       <version>5.1.5.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>5.1.5.RELEASE</version>
+    </dependency>
+
     <!-- JSTL Dependency-->
     <dependency>
       <groupId>javax.servlet.jsp.jstl</groupId>
