--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,16 @@
       <artifactId>hibernate-c3p0</artifactId>
       <version>5.3.10.Final</version>
     </dependency>
+
+    <!-- Jackson -->
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.12.3</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
