--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>5.1.8.RELEASE</version>
+    </dependency>
+
     <!-- Spring MVC Dependency -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -99,7 +105,7 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.26</version>
+      <version>8.0.25</version>
     </dependency>
 
     <!-- c3p0 -->
