--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -5,7 +5,7 @@ mysql.username=root
 mysql.password=root120056
 
 # Hibernate properties
-hibernate.show_sql=true 
+hibernate.show_sql=false 
 hibernate.hbm2ddl.auto=validate
 
 #C3P0 properties
