--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.mortennobel</groupId>
+      <artifactId>java-image-scaling</artifactId>
+      <version>0.8.6</version>
+    </dependency>
 
   </dependencies>
 
