catalog validation (dont work)

--- a/src/main/resources/messages/validation.properties
+++ b/src/main/resources/messages/validation.properties
@@ -1,2 +1,2 @@
-NotEmpty.order.productType = Product type is required!
-NotEmpty.order.cost = Cost is required!
+NotEmpty.calculator.productType = Product type is required!
+NotEmpty.calculator.cost = Cost is required!
